--- a/content/money/passive-income-protfolio/202008.zh-cn.md
+++ b/content/money/passive-income-protfolio/202008.zh-cn.md
@@ -50,7 +50,7 @@ isCJKLanguage: true
 
 看完以上视频后如果觉得双均线交易策略还不错的话，那么你可能需要这个工具：
 
-[Invest Alchemy](https://money.i365.tech/)
+[Invest Alchemy](https://money.bmpi.dev/)
 
 ![](https://img.bmpi.dev/fb53992f-9bd7-d241-e0c3-f748c5837072.png)
 
