--- a/content/money/passive-income-protfolio/202104.zh-cn.md
+++ b/content/money/passive-income-protfolio/202104.zh-cn.md
@@ -118,7 +118,7 @@ H股ETF(510900.SH)于20210305日卖出, 空仓55天, 空仓期涨幅-3.18%
 
 双均线策略再次捕捉到了医药和创业板的暴涨，持仓盈利近 10%。我在思考要不要在高估值的品种只采取双均线这类趋势跟随的策略？因为一般投资品种在高估值大多经历了暴涨，在这个阶段波动区间很大，趋势跟随策略的表现应该很好。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
 
 ### 组合表现
 
