--- a/content/money/passive-income-protfolio/202105.zh-cn.md
+++ b/content/money/passive-income-protfolio/202105.zh-cn.md
@@ -102,7 +102,7 @@ H股ETF(510900.SH)于20210305日卖出, 空仓84天, 空仓期涨幅-6.28%
 纳指ETF(159941.SZ)于20210507日卖出, 空仓21天, 空仓期涨幅-0.92%
 ```
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
 
 ### 组合表现
 
