--- a/content/money/passive-income-protfolio/202106.zh-cn.md
+++ b/content/money/passive-income-protfolio/202106.zh-cn.md
@@ -330,7 +330,7 @@ H股ETF(510900.SH)于20210616日卖出, 空仓13天, 空仓期涨幅2.39%
 黄金基金(518800.SH)于20210610日卖出, 空仓19天, 空仓期涨幅-4.05%
 ```
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
 
 ### 组合表现
 
