--- a/content/money/passive-income-protfolio/202107.zh-cn.md
+++ b/content/money/passive-income-protfolio/202107.zh-cn.md
@@ -152,7 +152,7 @@ H股ETF(510900.SH)于20210707日卖出, 空仓23天, 空仓期涨幅-9.61%
 中国互联(164906.SZ)于20210513日卖出, 空仓78天, 空仓期涨幅-28.04%
 中概互联(513050.SH)于20210708日卖出, 空仓22天, 空仓期涨幅-7.66%
 ```
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
 
 ### 组合表现
 
