--- a/content/money/passive-income-protfolio/2022Q1.zh-cn.md
+++ b/content/money/passive-income-protfolio/2022Q1.zh-cn.md
@@ -59,7 +59,7 @@ og_image: "https://img.bmpi.dev/9e8d58a1-5ff1-c6ed-135d-a5f76e7366d0.png"
 
 投资市场：中国、香港及美国。
 
-交易策略：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)。
+交易策略：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)。
 
 资金管理：分散投资，买入标的单个不超过总资金 20%，单类（同一行业）标的持仓总市值不超过总资金 30%。
 
