--- a/content/money/passive-income-protfolio/2022Q2.zh-cn.md
+++ b/content/money/passive-income-protfolio/2022Q2.zh-cn.md
@@ -17,7 +17,7 @@ og_image: "https://img.bmpi.dev/b2c19910-b83c-94a0-7153-9fc938fa74cf.png"
 
 之前写过一篇[长期投资之难](/money/passive-income-protfolio/202103/)的文章，介绍了看似简单的投资行为要长期坚持，却是件很难的事情。本期就交易之难，分享下我的个人经验。[被动收入投资组合](/categories/被动收入投资组合/)的交易策略是[双均线系统](/money/passive-income-protfolio/202008/)，这是一个简单到几分钟就可以解释清楚的交易策略，但要用好却并不简单。
 
-以本季度双均线交易策略发出的买入卖出信号来分析（数据来源于[交易信号邮件提醒](https://money.i365.tech/)系统）：
+以本季度双均线交易策略发出的买入卖出信号来分析（数据来源于[交易信号邮件提醒](https://money.bmpi.dev/)系统）：
 
 ```text
 4月1日：
@@ -152,7 +152,7 @@ og_image: "https://img.bmpi.dev/b2c19910-b83c-94a0-7153-9fc938fa74cf.png"
 
 投资市场：中国、香港及美国。
 
-交易策略：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)。
+交易策略：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)。
 
 资金管理：分散投资，买入标的单个不超过总资金 20%，单类（同一行业）标的持仓总市值不超过总资金 30%。
 
