--- a/content/money/passive-income-protfolio/202010.zh-cn.md
+++ b/content/money/passive-income-protfolio/202010.zh-cn.md
@@ -38,7 +38,7 @@ isCJKLanguage: true
 
 从双均线交易信号看，目前大多数指数基金都处于持仓仓位，但是由于市场处于震荡整理行情，所以双均线会出现短期买入并卖出的信号干扰。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
 
 ### 投资交易的心理建设
 
