--- a/content/money/passive-income-protfolio/202009.zh-cn.md
+++ b/content/money/passive-income-protfolio/202009.zh-cn.md
@@ -42,7 +42,7 @@ isCJKLanguage: true
 
 从双均线交易信号看，目前大多数指数基金都处于空仓仓位，如果你采用此交易策略，那可以躲过这次大的跌幅。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://www.myinvestpilot.com/)
 
 ### 大跌时我们能做什么
 
