--- a/content/money/passive-income-protfolio/202012.zh-cn.md
+++ b/content/money/passive-income-protfolio/202012.zh-cn.md
@@ -82,7 +82,7 @@ isCJKLanguage: true
 
 如果你分析下双均线策略信号最近两个月的表现，会发现双均线在趋势行情中表现还是很不错的。对于高估值的标的如创业板、消费与医药，双均线在上月底还是空仓状态，躲过上个月的大跌，又吃到了这个月的大涨。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://www.myinvestpilot.com/)
 
 ### 组合表现
 
