--- a/content/money/passive-income-protfolio/202101.zh-cn.md
+++ b/content/money/passive-income-protfolio/202101.zh-cn.md
@@ -121,7 +121,7 @@ H股ETF(510900.SH)于20210104日买入, 持有25天, 盈利5.45%
 
 从双均线持仓的品种中可以看出创业板50、医药、原油、深100、环保、50AH、中国互联与中概互联这些品种持仓一个多月收益都超过10%了，当然也有下跌的品种，平均跌幅范围在-5%至-1%之间。双均线策略非常适合牛市这种大趋势行情，而之前我们在 [双均线交易策略](/money/passive-income-protfolio/202008/) 这篇文章中回测发现创业板很适合采用双均线策略，因为其波动性比较大，也比较有趋势性。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://www.myinvestpilot.com/)
 
 ### 组合表现
 
