--- a/content/money/passive-income-protfolio/202102.zh-cn.md
+++ b/content/money/passive-income-protfolio/202102.zh-cn.md
@@ -17,7 +17,7 @@ og_image: "https://img.bmpi.dev/28a8c22b-f064-8846-2f58-17f3d9749be2.png"
 
 在使用了一段时间估值策略后，我发现估值策略并不适合作为一个单独的交易策略：如果通过计算一个标的的历史估值区间，然后将这个区间划分为多个区间段，在低估值区间段分批买入，高估值区间段分批卖出。这种交易策略本身是可以赚钱的，它的买入策略可以让我们在下跌大趋势时做左侧交易，卖出策略可以让我们在上涨大趋势时做右侧交易。这种策略宏观上是没错的，难的在于微观上操作时尤其是卖出时很容易错失最具爆发力的后期上涨阶段。以创业板、消费和医药指数为例，被动收入投资组合在估值便宜的时候一直持有，大概在估值达95-98%的时候开始卖出，实际上涨幅最猛烈的就属于98-100%的这个阶段，而且可能会长时间（比一般人想象的要久一些）在这个估值区间运行。
 
-后期我开始调整策略，转而在高估值区间采用趋势跟随交易策略（双均线），最终开发了 [双均线策略信号邮件提醒程序](https://money.bmpi.dev/)。
+后期我开始调整策略，转而在高估值区间采用趋势跟随交易策略（双均线），最终开发了 [双均线策略信号邮件提醒程序](https://www.myinvestpilot.com/)。
 
 那么估值究竟是什么？能不能用估值作为交易策略？在这篇 [燕翔：树能不能长到天上去，谈估值天花板（国信策略）](https://mp.weixin.qq.com/s/2dNo-QXZ-ipkAQW44B8-NA) 文章中：
 
@@ -117,7 +117,7 @@ H股ETF(510900.SH)于20210224日买入, 持有2天, 盈利-1.46%
 
 双均线策略天生很适合在大趋势行情中捕捉大段的盈利区间，以创业板50()为例，双均线交易策略于[2020年12月11日发出买入信号](https://www.i365.tech/invest-alchemy/data/strategy/double-ma/20201211.txt)（买入价1.116），于[2021年02月26日发出卖出信号](https://www.i365.tech/invest-alchemy/data/strategy/double-ma/20210226.txt)（卖出价1.269）,持仓77天盈利13.7%。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://www.myinvestpilot.com/)
 
 ### 组合表现
 
