--- a/content/money/passive-income-protfolio/202103.zh-cn.md
+++ b/content/money/passive-income-protfolio/202103.zh-cn.md
@@ -127,7 +127,7 @@ H股ETF(510900.SH)于20210305日卖出, 空仓28天, 空仓期涨幅-0.57%
 
 双均线策略里很多品种都进入空仓状态，已经持仓的品种都已盈利，目前的市场行情并不好，可以继续等待更多的买入时机。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://www.myinvestpilot.com/)
 
 ### 组合表现
 
