--- a/content/money/passive-income-protfolio/202108.zh-cn.md
+++ b/content/money/passive-income-protfolio/202108.zh-cn.md
@@ -139,7 +139,7 @@ H股ETF(510900.SH)于20210707日卖出, 空仓54天, 空仓期涨幅-11.51%
 中概互联(513050.SH)于20210708日卖出, 空仓53天, 空仓期涨幅-13.23%
 ```
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://www.myinvestpilot.com/)
 
 ### 组合表现
 
