--- a/content/money/passive-income-protfolio/202109.zh-cn.md
+++ b/content/money/passive-income-protfolio/202109.zh-cn.md
@@ -57,7 +57,7 @@ og_image: "https://img.bmpi.dev/e1ce3cfa-c724-42d6-8a28-d322bc70c86c.png"
 军工ETF(512660.SH)于20210907日卖出, 空仓22天, 空仓期涨幅-7.53%
 ```
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://www.myinvestpilot.com/)
 
 ### 组合表现
 
