--- a/content/money/passive-income-protfolio/2021Q4.zh-cn.md
+++ b/content/money/passive-income-protfolio/2021Q4.zh-cn.md
@@ -79,7 +79,7 @@ og_image: "https://img.bmpi.dev/8f81177f-470f-5878-6381-e2993db90e0a.png"
 
 经过上述交易分析，我并不适合估值交易策略。所以之后的交易策略统一为双均线交易策略。但我会对双均线策略做一定的优化，旨在降低双均线策略在震荡行情中的频繁交易。
 
-我也会对 [双均线策略信号提醒系统](https://money.bmpi.dev/) 做一定的优化，修复已知的 Bugs。
+我也会对 [双均线策略信号提醒系统](https://www.myinvestpilot.com/) 做一定的优化，修复已知的 Bugs。
 
 ## 组合季报
 
@@ -93,7 +93,7 @@ og_image: "https://img.bmpi.dev/8f81177f-470f-5878-6381-e2993db90e0a.png"
 
 投资市场：中国、香港及美国。
 
-交易策略：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)。
+交易策略：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://www.myinvestpilot.com/)。
 
 资金管理：分散投资，买入标的单个不超过总资金 20%，单类（同一行业）标的持仓总市值不超过总资金 30%。
 
