--- a/content/money/passive-income-protfolio/2022Q4.zh-cn.md
+++ b/content/money/passive-income-protfolio/2022Q4.zh-cn.md
@@ -22,9 +22,9 @@ isCJKLanguage: true
 
 ![](https://img.bmpi.dev/3de2f4a7-dc57-e0cd-fd65-fcd08093cf48.png)
 
-今年[被动收入组合](https://money.bmpi.dev/portfolio?t=bmpi&p=被动收入)最大的变化就是投资策略的变化，我逐渐摒弃了人工介入交易的操作，在绝大多数时候，只跟随交易策略的买入卖出信号来交易，这种操作反而让被动收入组合避免了净值的大幅度亏损。
+今年[被动收入组合](https://www.myinvestpilot.com/portfolio?t=bmpi&p=被动收入)最大的变化就是投资策略的变化，我逐渐摒弃了人工介入交易的操作，在绝大多数时候，只跟随交易策略的买入卖出信号来交易，这种操作反而让被动收入组合避免了净值的大幅度亏损。
 
-另外两个投资组合：[1号组合](https://money.bmpi.dev/portfolio?t=robot_dma_v01&p=dma_11_22)和[2号组合](https://money.bmpi.dev/portfolio?t=robot_dma_v02&p=dma_11_22)，使用的也是相同的交易策略，唯一有差异的是2号投资组合只交易创业板ETF标的。从结果看，2号组合的亏损也比1号组合和被动收入组合要少，其中原因可能是双均线交易策略在下跌行情中，会发出一些必要的试错交易信号来捕捉行情拐点的机会，当交易标的很多的时候，这种试错成本就会增大，所以只交易单个标的的2号组合亏损反而最少。
+另外两个投资组合：[1号组合](https://www.myinvestpilot.com/portfolio?t=robot_dma_v01&p=dma_11_22)和[2号组合](https://www.myinvestpilot.com/portfolio?t=robot_dma_v02&p=dma_11_22)，使用的也是相同的交易策略，唯一有差异的是2号投资组合只交易创业板ETF标的。从结果看，2号组合的亏损也比1号组合和被动收入组合要少，其中原因可能是双均线交易策略在下跌行情中，会发出一些必要的试错交易信号来捕捉行情拐点的机会，当交易标的很多的时候，这种试错成本就会增大，所以只交易单个标的的2号组合亏损反而最少。
 
 从整个组合的交易周期看，与全球市场主流指数对比，被动收入组合目前排名还不错，仅创业板、印度孟买、1号组合、2号组合、BTC与ETH比其净值高，这得益于今年好的亏损控制能力。
 
@@ -50,10 +50,10 @@ isCJKLanguage: true
 - **组合介绍**：被动收入组合旨在以**最小交易维护成本**做进取型**长期投资**，期望通过投资获得**被动收入**，保障 [家庭财务](/self/my-financial-planning/) 状况健康。
 - **投资标的**：各类ETF，包括宽基指数、行业指数等，尤其是这篇 [最牛指数](/money/passive-income-protfolio/202106/) 里的指数。也会拿出不超过组合 10% 的占比来投资（投机）风险更高的加密货币。
 - **投资市场**：中国、香港及美国。
-- **交易策略**：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [投资炼金术](https://money.bmpi.dev/)。
+- **交易策略**：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [投资炼金术](https://www.myinvestpilot.com/)。
 - **资金管理**：分散投资，买入标的单个不超过总资金 20%，单类（同一行业）标的持仓总市值不超过总资金 30%。
 - **资产配置**：见这篇 [家庭资产配置的阶段](/money/passive-income-protfolio/202104/)。
 
 ### 组合表现 && 当前持仓
 
-组合的详细数据见此页面更新：[被动收入投资组合 - 投资炼金术](https://money.bmpi.dev/portfolio?t=bmpi&p=被动收入)
+组合的详细数据见此页面更新：[被动收入投资组合 - 投资炼金术](https://www.myinvestpilot.com/portfolio?t=bmpi&p=被动收入)
