--- a/content/self/annual-summary/2022.zh-cn.md
+++ b/content/self/annual-summary/2022.zh-cn.md
@@ -38,7 +38,7 @@ categories: [
 
 ![](https://img.bmpi.dev/af808484-7ebe-e596-3166-9f6958486e47.png)
 
-**[被动收入投资组合](https://money.bmpi.dev/portfolio?t=bmpi&p=被动收入)年复合收益率超15%**。组合的净值从年初的1.538降低到了目前的1.421（下跌7.6%），年复合收益率为8.3%。这个表现看起来很差劲，但相对其他市场的指数来说，排名从第7名提高到了第4名，说明目前这个组合的风险控制做的还不错。
+**[被动收入投资组合](https://www.myinvestpilot.com/portfolio?t=bmpi&p=被动收入)年复合收益率超15%**。组合的净值从年初的1.538降低到了目前的1.421（下跌7.6%），年复合收益率为8.3%。这个表现看起来很差劲，但相对其他市场的指数来说，排名从第7名提高到了第4名，说明目前这个组合的风险控制做的还不错。
 
 ![](https://img.bmpi.dev/faa64ac8-154e-03a5-637c-6cad675d4ef9.png)
 
