--- a/content/money/passive-income-protfolio/202011.zh-cn.md
+++ b/content/money/passive-income-protfolio/202011.zh-cn.md
@@ -38,7 +38,7 @@ isCJKLanguage: true
 
 从双均线交易信号看，目前持有的大部分是估值处于中部的标的。从趋势交易的角度看目前值得持有的都是一些中低估值的标的。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.bmpi.dev/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://www.myinvestpilot.com/)
 
 ### 关于银行分期贷款的坑
 
