--- a/content/money/passive-income-protfolio/2022Q3.zh-cn.md
+++ b/content/money/passive-income-protfolio/2022Q3.zh-cn.md
@@ -52,10 +52,10 @@ isCJKLanguage: true
 - **组合介绍**：被动收入组合旨在以**最小交易维护成本**做进取型**长期投资**，期望通过投资获得**被动收入**，保障 [家庭财务](/self/my-financial-planning/) 状况健康。
 - **投资标的**：各类ETF，包括宽基指数、行业指数等，尤其是这篇 [最牛指数](/money/passive-income-protfolio/202106/) 里的指数。也会拿出不超过组合 10% 的占比来投资（投机）风险更高的加密货币。
 - **投资市场**：中国、香港及美国。
-- **交易策略**：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [投资炼金术](https://money.bmpi.dev/)。
+- **交易策略**：[双均线策略](/money/passive-income-protfolio/202008/)。想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [投资炼金术](https://www.myinvestpilot.com/)。
 - **资金管理**：分散投资，买入标的单个不超过总资金 20%，单类（同一行业）标的持仓总市值不超过总资金 30%。
 - **资产配置**：见这篇 [家庭资产配置的阶段](/money/passive-income-protfolio/202104/)。
 
 ### 组合表现 && 当前持仓
 
-组合的详细数据见此页面更新：[被动收入投资组合 - 投资炼金术](https://money.bmpi.dev/portfolio?t=bmpi&p=被动收入)
+组合的详细数据见此页面更新：[被动收入投资组合 - 投资炼金术](https://www.myinvestpilot.com/portfolio?t=bmpi&p=被动收入)
