--- a/content/weeklies/20240721.zh-cn.md
+++ b/content/weeklies/20240721.zh-cn.md
@@ -69,7 +69,7 @@ isCJKLanguage = true
 
 我目前的分数是30分，按多邻国的解释是：30分代表能在现实生活中能够简单讨论一些日常话题了，我感觉我大概是介于40-50分之间。50-70分代表能自信应对旅行时会遇到的大部分问题，70-90分代表能够自信应对大部分日常活动，能够阐述自己的想法。那我的目标就是刷到70分以上，估计怎么也得刷个一年吧，毕竟每天就5分钟的时间。
 
-我还在即刻看到一个搞笑的也许是真事的梗：一个应聘者被HR要求证明自己有很强毅力的事实，他拿出了自己多邻国坚持打卡两千多天的记录。
+我还在即刻看到一个搞笑的也许是真事的梗：一个应聘者被HR要求证明自己有很强毅力的事实，他拿出了自己多邻国坚持打卡两千多天的记录。不过如果是我的话，我会拿出我坚持记账三千多天的记录。
 
 #### 游戏
 
