--- a/content/weeklies/20240519.zh-cn.md
+++ b/content/weeklies/20240519.zh-cn.md
@@ -12,7 +12,7 @@ isCJKLanguage = true
 
 早在19年的时候，我创建了自己的博客：构建我的被动收入，域名是`bmpi.dev`。当时的目标是通过写作来记录我的学习、技术与投资相关的内容，最终希望能实现被动收入。但是，博客名叫被动收入听起来又太单一了，不符合我经常写作的主题，于是我又重新把博客命名为：BMPI，并与ChatGPT一块讨论后赋予其新的含义。于是BMPI就有了如下的含义：
 
-- Build My Personal Insights：对应学习的主题，分享我在学习各个领域时的思考和见解。
+- Build My Personal Intelligence：对应学习的主题，分享我在学习各个领域时的思考和见解。
 - Build My Programming Insights：对应技术的主题，分享我在个人产品开发中的见解。
 - Build My Passive Income：对应投资的主题，分享我在投资过程的思考和理解。
 
