--- a/content/weeklies/20240803.zh-cn.md
+++ b/content/weeklies/20240803.zh-cn.md
@@ -42,6 +42,6 @@ isCJKLanguage = true
 
 最近几周，我完成了《神秘海域4》的游戏，总共耗时18小时。整体体验就像在看电影，特别是车辆追逐的章节，其精彩程度不亚于任何好莱坞大片。游戏的画面非常出色，沉浸感很强。虽然剧情有些乏味，但整体体验仍然非常棒。
 
-同时，我还观看了美剧《猎魔人》第一季。不得不说，除了亨利·卡维尔饰演的杰洛特表现突出外，其他角色和剧情都不尽如人意。特别是扮演叶奈法的演员，她的表现和剧情的复杂程度都让我感到失望。编剧采用了双线叙事，但处理得并不好。如果不是因为我在《巫师》游戏中投入了近百小时，我可能都无法坚持看下去。
+同时，我还刷了美剧《猎魔人》第一季。不得不说，除了亨利·卡维尔饰演的杰洛特表现突出外，其他角色和剧情都不尽如人意。特别是扮演叶奈法的演员，她的表现和剧情的复杂程度都让我感到失望。编剧采用了双线叙事，但处理得并不好。如果不是因为我在《巫师》游戏中投入了近百小时，我可能都无法坚持看下去。
 
 周六，在《黑神话：悟空》评分解禁后，立刻下单了。之后，看了电影《异形：夺命舰》。这确实是引进的最恐怖的一部电影，而且几乎没有删减。可能审核的领导也是《异形》系列的粉丝。我看的是4K 120帧的，但是感觉效果还不如之前看的杜比影院的效果，而且在看的过程中，我一度只能捂着耳朵，尽管我对异形的外貌已经习以为常，但看到那么多异形，还是感到有些恶心。
