--- a/content/weeklies/20240817.zh-cn.md
+++ b/content/weeklies/20240817.zh-cn.md
@@ -32,7 +32,7 @@ isCJKLanguage = true
 
 ### 投资
 
-美股市场再次经历了过山车般的行情。尽管我在高位卖出，但在尝试抄底时却遭遇了亏损，一度让我去年的盈利全部回撤，甚至出现了一些本金亏损。甚至在一个晚上，亏损额可以超过了我几个月的打工收入。尽管如此，我并没有感到恐慌。然而，尴尬的是，我没有更多的资金来进行抄底。随后，美股大幅反弹，现在几乎已经赚回了所有的亏损。
+美股市场再次经历了过山车般的行情。尽管我在最高位精准减仓了，但在不断抄底时却遭遇了亏损，一度让我把去年的盈利全部回撤完，甚至出现了一些本金亏损。有时在一个晚上，亏损额可以超过了我几个月的打工收入，第二天我还得假装开心的去上班，不得不说，这需要练习适应下。尽管如此，我并没有感到恐慌。然而，尴尬的是，我没有更多的资金来进行抄底。随后，美股大幅反弹，现在几乎已经赚回了所有的亏损。
 
 回顾这次经历，我没有预料到市场会有如此大的回撤。市场显然产生了过度的恐慌情绪。但正是这种群体性的恐慌情绪，为我提供了更多的交易机会。
 
